Fix vertical alignment for entry-box input

--- a/style.css
+++ b/style.css
@@ -78,7 +78,7 @@ p
 .entry-box input[type="text"]
 {
     width: 100%;
-    padding: 10px;
+    padding: 10px 10px 10px 0px;
     border: none;
     border-radius: 5px;
     background-color: transparent;
@@ -90,7 +90,7 @@ p
 .entry-box input[type="password"]
 {
     width: 100%;
-    padding: 10px;
+    padding: 10px 10px 10px 0px;
     border: none;
     border-radius: 5px;
     background-color: transparent;
@@ -107,7 +107,7 @@ p
     transform: translateY(-50%);
     color: #f5f5f5;
     pointer-events: none;
-    transition: 0.2s;
+    transition: 0.3s;
 }
 
 .entry-box svg 
@@ -119,7 +119,7 @@ p
 }
 
 .entry-box input[type="text"]:focus + label,
-.entry-box input[type="text"]:valid + label 
+.entry-box input[type="text"]:valid + label
 {
     transform: translateY(-150%);
     font-size: 0.8em; 
